# mcp-mainframe-public

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.cursor/rules/: python-linting.mdc
scripts/: backup.sh  create-secret.sh  generate-claude-config.py  health-check.sh  init-sops-config.sh  install-local-servers.sh  status.sh  update-servers.sh
secrets/: .sops.yaml
secrets/examples/: 1password.yaml  airtable.yaml  aws.yaml  craft.yaml  dagster.yaml  framer.yaml  front.yaml  ghost.yaml  github.yaml  google-workspace.yaml  namecheap.yaml  quickbooks.yaml  readwise.yaml  slack.yaml  stripe.yaml  vercel.yaml
servers/ibkr-mcp/: README.md  pyproject.toml
servers/ibkr-mcp/src/ibkr_mcp/: __init__.py  server.py  sqs_client.py
servers/ibkr-mcp/tests/: __init__.py
servers/onepassword-mcp/: README.md  pyproject.toml
servers/onepassword-mcp/src/onepassword_mcp/: __init__.py  client.py  security.py  server.py
servers/onepassword-mcp/tests/: __init__.py  test_client.py  test_security.py
