[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibkr-mcp"
version = "0.1.0"
description = "MCP server for Interactive Brokers via SQS"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[sqs]>=5.0.0",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
